# cpp-gitbash-powerline

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: bash_color.hpp  git_repo.hpp  help_functions.hpp  unicode_symbols.hpp
src/: bash_color.cpp  git_repo.cpp  help_functions.cpp  main.cpp  unicode_symbols.cpp
